--- a/style.css
+++ b/style.css
@@ -92,8 +92,8 @@ ul.yellow:hover {
   position: relative;
   text-align: center;
   font-family: 'Iosevka';
-  background-color: #1b1b1b;
-  border: 5px solid #1b1b1b;
+  background-color: #434c5e;
+  border: 5px solid #3b4252;
   border-radius: 10px;
 }
 
