--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ ul.yellow:hover {
   position: relative;
   text-align: center;
   font-family: 'Iosevka';
-  background-color: #434c5e;
+  background-color: #3b4252;
   border: 5px solid #3b4252;
   border-radius: 10px;
 }
